force-app/main/default/objects/Team_Leader_Mapping__c/Team_Leader_Mapping__c.object-meta.xml
<CustomObject>
    <description>to store the combinations of IC and TL based on the business sector</description>
    <label>Team Leader Mapping</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Team Leader Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Leader Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>