force-app/main/default/objects/Team_Leader_Mapping__c/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Sector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Sector__c.ICRA_Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.ICRA_Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Sector__c</referenceTo>
    <relationshipLabel>Team Leader Mapping</relationshipLabel>
    <relationshipName>Team_Leader_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>