force-app/main/default/objects/Team_Leader_Mapping__c/fields/ICRA_Branch__c.field-meta.xml
<CustomField>
    <fullName>ICRA_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICRA Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Team Leader Mapping</relationshipLabel>
    <relationshipName>Team_Leader_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>