force-app/main/default/objects/Team_Leader_Mapping__c/fields/Individual_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Individual_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Contributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Leader_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>