force-app/main/default/objects/Team_Leader_Mapping__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Leader_Mapping1</relationshipName>
    <type>Lookup</type>
</CustomField>