force-app/main/default/objects/Team_Leader_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Individual_Contributor__c</columns>
    <columns>ICRA_Branch__c</columns>
    <columns>Business_Sector__c</columns>
    <columns>Team_Leader__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>